# ChangeLog for net-p2p/sancho-bin
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-p2p/sancho-bin/ChangeLog,v 1.16 2004/09/15 18:00:27 squinky86 Exp $

*sancho-bin-0.9.4.14 (15 Sep 2004)

  15 Sep 2004; Jon Hood <squinky86@gentoo.org> sancho-bin-0.9.4.10.ebuild,
  +sancho-bin-0.9.4.14.ebuild:
  Stable and testing version bumps for x86.

  11 Sep 2004; Jon Hood <squinky86@gentoo.org> -sancho-bin-0.9.4.7.ebuild,
  -sancho-bin-0.9.4.8.ebuild, sancho-bin-0.9.4.9.ebuild:
  Stable on x86, cleanup old ebuilds.

*sancho-bin-0.9.4.11 (22 Aug 2004)

  22 Aug 2004; Jon Hood <squinky86@gentoo.org> +sancho-bin-0.9.4.11.ebuild:
  Version bump, closes #61305.

*sancho-bin-0.9.4.10 (13 Aug 2004)

  13 Aug 2004; Jon Hood <squinky86@gentoo.org> +sancho-bin-0.9.4.10.ebuild:
  Version bump, closes #60241. Thanks spiralvoice.

  12 Aug 2004; Jon Hood <squinky86@gentoo.org> -sancho-bin-0.9.4.5-r1.ebuild,
  sancho-bin-0.9.4.7.ebuild, sancho-bin-0.9.4.9.ebuild:
  Stable on x86 irt #60108 and removing non-working version.

*sancho-bin-0.9.4.9 (11 Aug 2004)

  11 Aug 2004; Jon Hood <squinky86@gentoo.org> +sancho-bin-0.9.4.9.ebuild:
  Version bump, thanks spiralvoice <spiralvoice@hotmail.com>, #59997.

*sancho-bin-0.9.4.8 (09 Aug 2004)

  09 Aug 2004; Jon Hood <squinky86@gentoo.org> +sancho-bin-0.9.4.8.ebuild:
  Version bump, closes #59886; thanks spiralvoice <spiralvoice@hotmail.com>.
  Change gtk2 USE flag to gtk, as this package does not support both.

*sancho-bin-0.9.4.7 (03 Aug 2004)

  03 Aug 2004; Jon Hood <squinky86@gentoo.org> +sancho-bin-0.9.4.7.ebuild:
  Version bump; closes #56924; thanks spiralvoice <spiralvoice@hotmail.com>.

  01 Jul 2004; Jon Hood <squinky86@gentoo.org> sancho-bin-0.9.4.5-r1.ebuild:
  change virtual/glibc to virtual/libc

  22 Jun 2004; Jon Hood <squinky86@gentoo.org> -sancho-bin-0.9.4.3.ebuild,
  sancho-bin-0.9.4.5-r1.ebuild:
  0.9.4.3 tarball removed- requires 0.9.4.5 to be marked stable
