@@ -1,2 +1,0 @@
-MD5 de8de4330930c3ea1b772895474842f0 sancho-0.9.4-10-linux-gtk.tar.bz2 3921643
-MD5 9bda8d7b8451ad7b75f857df8b7e5210 sancho-0.9.4-10-linux-fox.tar.bz2 4152600
