@@ -1,2 +1,0 @@
-MD5 a8109172e2861309a23085329adfc85c sancho-0.9.4-9-linux-gtk.tar.bz2 3915779
-MD5 dc3860b20af8d0d5bd86df60164c2757 sancho-0.9.4-9-linux-fox.tar.bz2 4148090
