@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/sancho-bin/sancho-bin-0.9.4.9.ebuild,v 1.3 2004/09/11 16:10:27 squinky86 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/sancho-bin/sancho-bin-0.9.4.14-r1.ebuild,v 1.1 2004/09/16 23:55:48 squinky86 Exp $
 
 IUSE="gtk"
 
@@ -15,13 +15,14 @@ SRC_URI="http://sancho-gui.sourceforge.net/tmp/${MY_P}-linux-${TOOLKIT}.tar.bz2"
 SRC_URI="gtk? ( http://sancho-gui.sourceforge.net/tmp/${MY_P}-linux-gtk.tar.bz2 )
 	!gtk? ( http://sancho-gui.sourceforge.net/tmp/${MY_P}-linux-fox.tar.bz2 )"
 
-KEYWORDS="x86"
+KEYWORDS="~x86"
 SLOT="0"
 LICENSE="CPL-1.0 LGPL-2.1"
 
 DEPEND="virtual/libc
 	virtual/x11
-	gtk? ( >=x11-libs/gtk+-2 )"
+	gtk? ( >=x11-libs/gtk+-2
+		>=net-libs/linc-1.0.3 )"
 
 S="${WORKDIR}/${MY_P}-linux-${TOOLKIT}"
 
